# AdaPM

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml
.github/workflows/: bindings.yml  latest-ubuntu.yml  ubuntu-20.04.yml  ubuntu-22.04.yml
apps/: apps.cmake  apps.mk  dsgd.cc  knowledge_graph_embeddings.cc  matrix_factorization.cc  simple.cc  utils.h  word2vec.cc
apps/data/: README.md
apps/data/kge/: README  parameter.frequencies.tsv  test.del  train.del  train.partitioned.2x2.del  valid.del
apps/data/lm/: small.txt
apps/data/mf/: H.mma  W.mma  test.mmc  train.mmc  train.mmc.bin.colfreqs.csv
apps/mf/: data.h  io.h  loss.h  update.h
bindings/: README.md  bindings.cc  example.py  lookup_torch_abi.py  setup.py  test_import.py
docs/: env.md  experiments-arxiv21.md  experiments-sigmod22.md  experiments-vldb20.md  experiments.md  nups_configs.py
include/dmlc/: logging.h
include/ps/: addressbook.h  base.h  coloc_kv_server.h  coloc_kv_server_handle.h  coloc_kv_transfers.h  coloc_kv_worker.h  kv_app.h  ps.h  range.h  replica_manager.h  sampling.h  sarray.h  simple_app.h  sync_manager.h
include/ps/internal/: customer.h  message.h  postoffice.h  threadsafe_queue.h  van.h
make/: deps.mk  ps.mk
mb/: mb.mk  ps_access.cc
src/: customer.cc  meta.proto  postoffice.cc  resender.h  utils.h  van.cc  zmq_van.h
tests/: run_apps.sh  run_tests.sh  test.mk  test_dynamic_allocation.cc  test_locality_api.cc  test_many_key_operations.cc  test_sampling.cc  test_set_operation.cc  test_variable_length_values.cc  tests.cmake
tests/travis/: travis_script.sh
tracker/: dmlc_local.py  dmlc_ssh.py  experiments.py  tracker.py
